--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ h1{
 
 #div4{
     border: purple solid 5px;
+    box-sizing: content-box;
+    width: 50%;
+    float: right;
   
 
 }
@@ -43,6 +46,8 @@ h1{
 
 #div6{
     border: purple solid 5px;
+    box-sizing: content-box;
+    width: 50%;
  
 
 }
